--- a/InformationManagement/InformationManagement.vbproj
+++ b/InformationManagement/InformationManagement.vbproj
@@ -54,6 +54,7 @@
     <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -74,16 +75,40 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Admin\AdminDashboard.Designer.vb">
-      <DependentUpon>AdminDashboard.vb</DependentUpon>
+    <Compile Include="Admin\Dine-inOrders.Designer.vb">
+      <DependentUpon>Dine-inOrders.vb</DependentUpon>
     </Compile>
-    <Compile Include="Admin\AdminDashboard.vb">
+    <Compile Include="Admin\Dine-inOrders.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Admin\CotumerHistory.Designer.vb">
+      <DependentUpon>CotumerHistory.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\CotumerHistory.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Admin\TakeoutOrders.Designer.vb">
+      <DependentUpon>TakeoutOrders.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\TakeoutOrders.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Admin\ReservationStatus.Designer.vb">
+      <DependentUpon>ReservationStatus.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\ReservationStatus.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Admin\Adminlogin.Designer.vb">
       <DependentUpon>Adminlogin.vb</DependentUpon>
     </Compile>
     <Compile Include="Admin\Adminlogin.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Admin\CateringReservation.Designer.vb">
+      <DependentUpon>CateringReservation.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\CateringReservation.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Admin\Stafflogin.Designer.vb">
@@ -116,11 +141,23 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Admin\AdminDashboard.resx">
-      <DependentUpon>AdminDashboard.vb</DependentUpon>
+    <EmbeddedResource Include="Admin\CotumerHistory.resx">
+      <DependentUpon>CotumerHistory.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Admin\Dine-inOrders.resx">
+      <DependentUpon>Dine-inOrders.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Admin\TakeoutOrders.resx">
+      <DependentUpon>TakeoutOrders.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Admin\ReservationStatus.resx">
+      <DependentUpon>ReservationStatus.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Admin\Adminlogin.resx">
       <DependentUpon>Adminlogin.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Admin\CateringReservation.resx">
+      <DependentUpon>CateringReservation.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Admin\Login.resx">
       <DependentUpon>Login.vb</DependentUpon>
